frontend/express/public/stylesheets/styles/blocks/_vis.scss
@use "../base/colors" as c;
@use "sass:map";

.cly-vue-chart {
    padding: 20px 24px;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
}

.cly-vue-chart-legend {
    &__primary,
    &__secondary {
        white-space: nowrap;
        overflow-x: auto;
    }

    &__secondary--text-center {
        text-align: center;
    }

    &__p-series {
        display: inline-block;
        margin-left: 64px;
        cursor: pointer;

        &:first-child {
            margin-left: 36px;
        }

        &--deselected {
            .cly-vue-chart-legend__p-title,
            .cly-vue-chart-legend__p-number,
            .cly-vue-chart-legend__p-trend--trend-up,
            .cly-vue-chart-legend__p-trend--trend-down {
                color: #a7aeb8;
            }
        }
    }

    &__s-series {
        display: inline-block;
        margin-left: 48px;
        cursor: pointer;

        &:first-child {
            margin-left: 0px;
        }

        &--deselected {
            .cly-vue-chart-legend__s-rectangle,
            .cly-vue-chart-legend__s-title,
            .cly-vue-chart-legend__s-percentage {
                color: #a7aeb8;
            }
        }
    }

    &__second-row {
        margin-top: 3px;
    }

    &__p-checkbox {
        height: 16px;
        width: 16px;
        border: 1px solid #A7AEB8;
        display: inline-block;
        box-shadow: inset 0 0 0px 1.5px #fff;
        border-radius: 4px;
        vertical-align: middle;
        box-sizing: border-box;
    }

    &__p-title {
        display: inline-block;
        vertical-align: middle;
        font-size: 14px;
        color: map.get(c.$colors, "cool-gray-100");
    }

    &__p-tooltip {
        display: inline-block;

        i {
            font-size: 15px;
        }
    }

    &__p-number {
        display: inline-block;
        font-size: 24px;
        font-weight: 500;
        color: map.get(c.$colors, "cool-gray-100");
    }

    &__p-trend {
        display: inline-block;
        font-size: 14px;
        font-weight: 500;

        &--trend-up {
            color: map.get(c.$colors, "green-80");
        }

        &--trend-down {
            color: map.get(c.$colors, "red-100");
        }
    }

    &__s-rectangle {
        width: 12px;
        height: 6px;
        border-radius: 3px;
        display: inline-block;
        vertical-align: middle;
    }

    &__s-title,
    &__s-percentage {
        display: inline-block;
        vertical-align: middle;
        margin-left: 3px;
        font-size: 12px;
        font-weight: 400;
        color: #333C48;
    }

    &__pie {
        .cly-vue-chart-legend__s-series {
            margin-left: 0px;
            padding: 7px;

            &:hover {
                background-color: #F6F6F6;
                border-radius: 8px;

                .cly-vue-chart-legend__s-title,
                .cly-vue-chart-legend__s-percentage {
                    font-weight: 500;
                }
            }

            .cly-vue-chart-legend__s-title,
            .cly-vue-chart-legend__s-percentage {
                font-size: 14px;
            }

            .cly-vue-chart-legend__s-percentage {
                float: right;
            }
        }
    }
}

